# git_test

./: CMakeLists.txt  README.md  abc.txt  source.c
_c_windows/Private/: c_windows.c
_c_windows/Public/: c_windows.h
core/Private/: core.c
core/Public/: core.h
log/: 202141022530.txt  2021412231026.txt  2021412231442.txt  2021412232423.txt  202141223721.txt  20214122399.txt  202141864319.txt  202141864352.txt  2021419204122.txt  2021419204821.txt  2021421172647.txt  2021421181358.txt  2021421184610.txt  202142201824.txt  202142202147.txt  202142623831.txt
main_core/: CMakeLists.txt
main_core/Private/: git.c  log.c  main_core.c
main_core/Public/: git.h  log.h  main_core.h
simple_c_array/: CMakeLists.txt  simple_c_array.h
simple_c_array/Private/: simple_c_array_string.c
simple_c_array/Public/: simple_c_array.h  simple_c_array_string.h
simple_c_array/Public/Core/: simple_array_c_macro.h
simple_c_file/: CMakeLists.txt  simple_c_file.h
simple_c_file/Private/: simple_file.c
simple_c_file/Public/: simple_file.h
simple_c_guid/: CMakeLists.txt  simple_c_guid.h
simple_c_guid/Private/: simple_guid.c
simple_c_guid/Public/: simple_guid.h
simple_c_helper_file/: CMakeLists.txt  simple_c_helper_file.h
simple_c_helper_file/Private/: simple_file_helper.c
simple_c_helper_file/Public/: simple_file_helper.h
simple_c_path/: CMakeLists.txt  simple_c_path.h
simple_c_path/Private/: simple_path.c
simple_c_path/Public/: simple_path.h
simple_c_string_algorithm/: CMakeLists.txt  simple_c_string_algorithm.h
simple_c_string_algorithm/Private/: string_algorith.c
simple_c_string_algorithm/Public/: string_algorith.h
simple_c_windows/: CMakeLists.txt  simple_c_windows.h
simple_c_windows/Private/: simple_c_windows_setting.c
simple_c_windows/Public/: simple_c_windows_setting.h
